<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".SettingsActivity"
    tools:deviceIds="wear">
    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTitle"
        android:text="@string/settings_title"
        android:textSize="15pt"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:rotation="-3"
        />
    <TextView
        android:id="@+id/settings_usb_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/settings_usb_title"
        android:textSize="12pt"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/settings_baud_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/settings_baud_rate"
        android:textSize="10pt"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_usb_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Spinner
        android:id="@+id/cb_baud_rate"
        android:layout_width="wrap_content"
        android:layout_height="12pt"
        android:minWidth="100dp"
        android:minHeight="15dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/settings_usb_title"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
    android:id="@+id/settings_data_bits"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/colorPrimary"
    android:text="@string/settings_data_bits"
    android:textSize="10pt"
    android:layout_margin="10dp"
    app:layout_constraintTop_toBottomOf="@id/settings_baud_rate"
    app:layout_constraintLeft_toLeftOf="parent"
    />
    <Spinner
        android:id="@+id/cb_data_bits"
        android:layout_width="wrap_content"
        android:layout_height="12pt"
        android:minWidth="100dp"
        android:minHeight="15dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/settings_baud_rate"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
    android:id="@+id/settings_parity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/colorPrimary"
    android:text="@string/settings_parity"
    android:textSize="10pt"
    android:layout_margin="10dp"
    app:layout_constraintTop_toBottomOf="@id/settings_data_bits"
    app:layout_constraintLeft_toLeftOf="parent"
    />
    <Spinner
        android:id="@+id/cb_parity"
        android:layout_width="wrap_content"
        android:layout_height="12pt"
        android:minWidth="100dp"
        android:minHeight="15dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/settings_data_bits"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/settings_stop_bits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/settings_stop_bits"
        android:textSize="10pt"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_parity"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Spinner
        android:id="@+id/cb_stop_bits"
        android:layout_width="wrap_content"
        android:layout_height="12pt"
        android:minWidth="100dp"
        android:minHeight="15dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/settings_parity"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/settings_flow_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/settings_flow_control"
        android:textSize="10pt"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_stop_bits"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Spinner
        android:id="@+id/cb_flow_control"
        android:layout_width="wrap_content"
        android:layout_height="12pt"
        android:minWidth="100dp"
        android:minHeight="15dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/settings_stop_bits"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Space
        android:id="@+id/space_usb_bt"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/settings_flow_control"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
    android:id="@+id/settings_startup_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/colorPrimary"
    android:text="@string/settings_startup_title"
    android:textSize="12pt"
    android:layout_margin="10dp"
    app:layout_constraintTop_toBottomOf="@id/space_usb_bt"
    app:layout_constraintLeft_toLeftOf="parent"
    />
    <TextView
        android:id="@+id/settings_auto_connect_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/settings_auto_connect_title"
        android:textSize="10pt"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_startup_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Switch
        android:id="@+id/ckb_auto_connect"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:checked="true"
        android:layout_margin="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_startup_title"
        android:textOff="Off"
        android:textOn="On"
        android:theme="@style/progressBarRed"
        />
    <TextView
        android:id="@+id/settings_pip_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/settings_pip_title"
        android:textSize="10pt"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_auto_connect_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Switch
        android:id="@+id/ckb_pip"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:checked="true"
        android:layout_margin="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_auto_connect_title"
        android:textOff="Off"
        android:textOn="On"
        android:theme="@style/progressBarRed"
        />
    <Button
        android:id="@+id/settings_go_back"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/settings_go_back"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ckb_auto_connect"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_general"
        android:textColor="@color/buttonFill"
        />
</androidx.constraintlayout.widget.ConstraintLayout>