<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectActivity"
    android:background="@drawable/background"
    android:padding="@dimen/box_inset_layout_padding"
    >
    <TextView
        android:id="@+id/connect_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTitle"
        android:text="@string/connect_title"
        android:textSize="15pt"
        android:layout_margin="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:rotation="-3"
        />
    <Button
        android:id="@+id/btn_settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="III"
        android:layout_margin="20dp"

        app:layout_constraintLeft_toRightOf="@id/connect_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/connect_title"
        app:layout_constraintBottom_toBottomOf="@id/connect_title"
        android:background="@drawable/button_settings"
        />
    <TextView
        android:id="@+id/connect_bluetooth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/connect_bluetooth_title"
        android:textSize="12pt"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/connect_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Spinner
        android:id="@+id/cb_bluetooth"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/connect_bluetooth_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ProgressBar
        android:id="@+id/loading_bluetooth"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toRightOf="@id/cb_bluetooth"
        app:layout_constraintTop_toBottomOf="@id/connect_bluetooth_title"
        android:theme="@style/progressBarRed"
        />
    <Button
        android:id="@+id/btn_bluetooth_refresh"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/connect_bluetooth_refresh"
        app:layout_constraintTop_toBottomOf="@id/cb_bluetooth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_general"
        android:textColor="@color/buttonFill"
        />
    <TextView
        android:id="@+id/connect_usb_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/connect_usb_title"
        android:textSize="12pt"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_bluetooth_refresh"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Spinner
        android:id="@+id/cb_usb"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/connect_usb_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/btn_usb_refresh"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/connect_usb_refresh"
        app:layout_constraintTop_toBottomOf="@id/cb_usb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_general"
        android:textColor="@color/buttonFill"
        />
    <Button
        android:id="@+id/btn_connect"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:text="@string/connect_connect"
        app:layout_constraintTop_toBottomOf="@id/btn_usb_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_general"
        android:textColor="@color/buttonFill"
        />
</androidx.constraintlayout.widget.ConstraintLayout>