<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ControlActivity"
    tools:deviceIds="wear"
    android:background="@drawable/background"
    >
    <TextView
        android:id="@+id/control_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTitle"
        android:text="@string/control_title"
        android:textSize="15pt"
        android:layout_margin="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:rotation="-3"
        />
    <Button
        android:id="@+id/control_channel_1"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/control_channel_1"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_title"
        android:background="@drawable/button_channel"
        />
    <Button
        android:id="@+id/led_channel_1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text=""
        android:layout_margin="0dp"
        app:layout_constraintRight_toLeftOf="@id/control_channel_1"
        app:layout_constraintTop_toTopOf="@id/control_channel_1"
        app:layout_constraintBottom_toBottomOf="@id/control_channel_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_title"
        android:background="@drawable/circle_button"

        />
    <Button
        android:id="@+id/control_channel_2"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/control_channel_2"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_channel_1"
        android:background="@drawable/button_channel"
        />
    <Button
        android:id="@+id/led_channel_2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text=""
        android:layout_margin="0dp"
        app:layout_constraintRight_toLeftOf="@id/control_channel_2"
        app:layout_constraintTop_toTopOf="@id/control_channel_2"
        app:layout_constraintBottom_toBottomOf="@id/control_channel_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_title"
        android:background="@drawable/circle_button"

        />
    <Button
        android:id="@+id/control_channel_3"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/control_channel_3"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_channel_2"
        android:background="@drawable/button_channel"
        />
    <Button
        android:id="@+id/led_channel_3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text=""
        android:layout_margin="0dp"
        app:layout_constraintRight_toLeftOf="@id/control_channel_3"
        app:layout_constraintTop_toTopOf="@id/control_channel_3"
        app:layout_constraintBottom_toBottomOf="@id/control_channel_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_title"
        android:background="@drawable/circle_button"
        />
    <Button
        android:id="@+id/control_channel_4"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/control_channel_4"
        android:layout_margin="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_channel_3"
        android:background="@drawable/button_channel"
        android:clickable="true"
        />
    <Button
        android:id="@+id/led_channel_4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text=""
        android:layout_margin="0dp"
        app:layout_constraintRight_toLeftOf="@id/control_channel_4"
        app:layout_constraintTop_toTopOf="@id/control_channel_4"
        app:layout_constraintBottom_toBottomOf="@id/control_channel_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_title"
        android:background="@drawable/circle_button"
        />
    <Button
        android:id="@+id/control_go_back"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/control_go_back"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/control_go_to"
        app:layout_constraintTop_toBottomOf="@id/control_channel_4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_general"
        android:textColor="@color/buttonFill"
        />

    <Button
        android:id="@+id/control_go_to"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/control_go_to"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toRightOf="@id/control_go_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_channel_4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_general"
        android:textColor="@color/buttonFill"
        />

</androidx.constraintlayout.widget.ConstraintLayout>